
Bulletins:
- Accès en statut autre au Tableau récapitulatif des moyennes d'une classe dans 
  le cas où l'utilisateur a accès aux bulletins simplifiés ou non.
- Ajout d'un formulaire de paramètres communs aux bulletins HTML et PDF.
- Possibilité d'imprimer le bulletin des appréciations/synthèse sur les groupes 
  intercalés ou en recto/verso des bulletins élèves.

Panneau d'affichage:
- Possibilité de déposer un message pour les professeurs principaux.

Publipostage OOo:
- Possibilité d'autoriser tel utilisateur en particulier à uploader des modèles.

Engagements:
- Possibilité de déléguer la saisie de certains engagements aux professeurs principaux.

Général:
- Possibilité de prendre en compte un secure/proxy.php pour file_get_contents()
- Automatisation du changement de PP et de CPE lors du changement de classe.
- Ajout d'une option pour désactiver la vérification du certificat SSL lors des requêtes CAS.
  Jusqu'à la version 1.6.8, la vérification n'était pas imposée.
  Elle l'est maintenant.
  Si vos connexions CAS sont perturbées, modifiez le paramétrage dans Gestion 
  générale/Options de connexion.

AID :
- Si l'AID autorise le multi-inscription, on peut choisir de limiter aux 
  inscrits à une autre AID de la même catégorie :
Exemple :
En administrateur, on crée une "catégorie d'AID" → 'Association Sportive'
   On coche Inscriptions multiples :
En administrateur ou gestionnaire de la catégorie d'AID, on crée une AID → Licenciers
   On saisie tous les membres de l'association sportive
En administrateur ou gestionnaire de la catégorie d'AID, on crée de nouvelles AID 
en cochant Sous-groupe d'une autre AID puis en choisissant Licenciers
   Lors de la saisie des membres, seuls les membres de Licenciers sont proposés
- Si le droit est ouvert, un élève peut s'inscrire dans une AID


Gepi-1.6.7 (24/08/2015)
===========================
Librairies:
- Ajout de PHPMailer (https://github.com/PHPMailer/PHPMailer) 5.2.9

AID: